Fix column alignmnet

--- a/src/style/resources.css
+++ b/src/style/resources.css
@@ -52,8 +52,7 @@ can use the two classes connected together to style components that have both cl
 /* Row */
 .rowContainer {
   display: flex;
-  padding: 30px 40px;
-  text-align: center;
+  padding: 30px 0px;
   border-radius: 12px;
   background-color: var(--csm-resources);
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
